# tauri-plugin-http-ext

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: clippy.yml  format.yml  test.yml
api/: client.ts
api/adapter/: axios.ts
example/: index.html  package.json  tsconfig.json
example/src/: main.ts
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/src/: main.rs
src/: error.rs  lib.rs
