[package]
name = "tauri-plugin-http-ext"
version = "0.1.0"
description = "Tauri plugin http ext api"
edition = "2021"
rust-version = "1.59"
authors = ["Ardy Febriansyah"]
license = "MIT"
documentation = "https://github.com/ardyfeb/tauri-plugin-http-ext"
repository = "https://github.com/ardyfeb/tauri-plugin-http-ext"
exclude = ["/example", "/api", "/dist", "node_modules"]

[dependencies]
tauri = { version = "1.2.2" }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
http = "0.2.8"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
env_logger = "0.10.0"